// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "httpserver/handler/rpc/proto";

package proto;

// The greeting service definition.
service User {
  rpc Login (LoginRequest) returns (UserInfoReply) {}

  rpc GetUser (getUserRequest) returns (UserInfoReply) {}

  rpc UpdateUser (UpdateUserRequest) returns (UserInfoReply) {}
}

message LoginRequest {
  string userName = 1;
  string password = 2;
}

message getUserRequest {
  int64 uid = 1;
}

message UpdateUserRequest {
  int64  uid      = 1;
  string nickName = 2;
  string profile  = 3;
}

message UserInfoReply {
  int32 code         = 1;
  UserInfo userInfo  = 2;
}

message UserInfo {
  int64  uid      = 1;
  string userName = 2;
  string nickName = 3;
  string password = 4;
  string profile  = 5;
}